switch tag-index to new stylesheet; change svg margin for new stylesheet to prevent image being dragged off screen by large failure messages

--- a/src/main/resources/com/googlecode/yatspec/rendering/html/yatspec_alt.css
+++ b/src/main/resources/com/googlecode/yatspec/rendering/html/yatspec_alt.css
@@ -44,10 +44,8 @@ h1 {
 }
 
 svg {
-    display:block;
-    margin:auto;
+    margin: 2rem;
 }
-
 
 ul.contents a {
     text-transform: capitalize;
